# InstructionFusion

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
archive/: libquantum.counts
archive/backup data copy/: astar.counts  sjeng.counts
archive/backup data copy/pc_histogram/: all_histograms.sh~
archive/data analysis/: critical-section.ipynb  instruction-fusion.ipynb
archive/data cleaning/: main.ipynb
archive/pc_histogram/: add_opcode.pl  all_histograms.sh
backup data copy/: bzip2.counts  copy.sh  mcf.counts
backup data copy/pc_histogram/: pc_histogram.pl~
cleaned data/: astar.csv  bzip2.csv  gobmk.csv  h264ref.csv  hmmer.csv  libquantum.csv  mcf.csv  omnetpp.csv  sjeng.csv
cleaned_data/: astar.csv  bzip2.csv  gobmk.csv  h264ref.csv  hmmer.csv  libquantum.csv  mcf.csv  omnetpp.csv  sjeng.csv
data analysis/: critical-section.ipynb
exec/: CMakeLists.txt  instructions.h  main.cxx  rules.h
exec/rules/: CMakeLists.txt  celio_2016_rules.h  my_own_rules.h
fusion/: CMakeLists.txt  fusionConfig.cmake.in
fusion/common/: CMakeLists.txt
fusion/common/include/: csvHandler.h  dataRepresentation.h  experiment.h  fileHandler.h  fusion.h  instructions.h  macros.h  statistics.h
fusion/common/src/: csvHandler.cxx  dataRepresentation.cxx  experiment.cxx  fileHandler.cxx  statistics.cxx
fusion/common/tests/: CMakeLists.txt
fusion/core/: CMakeLists.txt
fusion/core/include/: csvHandler.h  dataRepresentation.h  exampleRules.h  experiment.h  fusion.h  fusionCalculator.h  instructionCount.h  instructions.h  macros.h
fusion/core/src/: CMakeLists.txt  fusion.cxx  fusionCalculator.cxx  instructionCount.cxx
fusion/core/tests/: CMakeLists.txt  arithmeticBranch.csv  data.csv  test.cxx  test_config.fsn
fusion/include/: configParser.h  csvHandler.h  dataRepresentation.h  exampleRules.h  experiment.h  fusion.h  instructions.h  macros.h
fusion/simulation/: CMakeLists.txt
fusion/simulation/include/: histogramParser.h  inOrderPipeline.h  pipeline.h  pipelineSimulator.h  simulationExperiment.h
fusion/simulation/src/: histogramParser.cxx  inOrderPipeline.cxx  pipelineSimulator.cxx  simulationExperiment.cxx
fusion/simulation/tests/: CMakeLists.txt  data.csv  test.cxx  test_data.csv
fusion/src/: csvHandler.cxx  dataRepresentation.cxx  experiment.cxx  fusion.cxx
fusion/tests/: CMakeLists.txt  test.cxx  test_data.csv
include/: csvHandler.h  dataRepresentation.h  experiment.h  fusion.h  instructions.h  macros.h
python/: aggregate cycles.ipynb  aggregate overall.ipynb  aggregate.ipynb  celio et al.ipynb  config.json  critical-section.ipynb  cycles 2.ipynb  cycles.ipynb  fusionLengths.ipynb  instructions.ipynb  num ports.ipynb  overview.ipynb  statistics.ipynb
raw data/: hmmer.counts
raw data/pc_histogram/: add_opcode.pl~  pc_histogram.pl
src/: CMakeLists.txt  csvHandler.cxx  dataRepresentation.cpp  dataRepresentation.cxx  experiment.cxx  fusion.cxx  main.cxx
tests/: test.cxx
